# StatisticsCpp

./: CMakeLists.txt  README.md
data/: 01 - Body Data.xlsx  02 - ANSUR I 1988.xlsx  03 - ANSUR II 2012.xlsx  04 - Measured and Reported.xlsx  05 - Body Temperatures.xlsx  06 - Births.xlsx  07 - Audiometry.xlsx  08 - Vision.xlsx  09 - Foot and Height.xlsx  10 - Family Heights.xlsx  11 - IQ and Lead.xlsx  12 - IQ and Brain Size.xlsx  13 - Freshman 15.xlsx  14 - Word Counts.xlsx  15 - Passive and Active Smoke.xlsx  16 - Cigarette Contents.xlsx  17 - Arsenic in Rice.xlsx  18 - Bear Measurements.xlsx  19 - Manatee Boat Deaths.xlsx  20 - Alcohol and Tobacco in Movies.xlsx  21 - Oscar Winner Age.xlsx  22 - Presidents.xlsx  23 - Nobel Laureates and Chocolate.xlsx  24 - Earthquakes.xlsx  25 - Tornadoes.xlsx  26 - Old Faithful.xlsx  27 - Internet Traffic.xlsx  28 - Course Evaluations.xlsx  29 - Speed Dating.xlsx  30 - Queues.xlsx  31 - Commute Times.xlsx  32 - Taxis.xlsx  33 - Disney World Wait Times.xlsx  34 - Airport Data Speeds.xlsx  35 - Car Data.xlsx  36 - Fast Food.xlsx  37 - Cola Weights and Volumes.xlsx  38 - Candies.xlsx  39 - Chocolate Chip Cookies.xlsx  40 - Coin Weights.xlsx  (+6 more)
src/app/: main.cpp
src/statistics/: statistics.cpp  statistics.ixx
